<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="botTextOutput"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0097A7"
        tools:context=".GameFragment">

        <ImageView
            android:id="@+id/playedUnoCardView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/playedUnoCardViewContentDescription"
            android:src="@drawable/blue_1_card_clipart_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="135dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/playedUnoCardView"
            app:layout_constraintStart_toStartOf="@+id/playedUnoCardView"
            app:layout_constraintTop_toBottomOf="@+id/playedUnoCardView">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/drawCardButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/drawCardButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/sayUnoButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/sayUnoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/botImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/playedUnoCardViewContentDescription"
            app:layout_constraintBottom_toTopOf="@+id/playedUnoCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/botTextOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{botTextOutput}"
            app:layout_constraintBottom_toBottomOf="@+id/botImageView"
            app:layout_constraintEnd_toStartOf="@+id/botImageView"
            app:layout_constraintTop_toTopOf="@+id/botImageView" />

        <ImageButton
            android:id="@+id/stopGameButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#0097A7"
            android:contentDescription="@string/stopGameButtonContentDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_fill0_wght400_grad0_opsz48" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>